[package]
name = "dx-todo"
version = "0.1.0"
authors = ["YotaroMatsui <b10matsuwo.10.madscience@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
gloo-storage = "0.3.0"
serde = "1.0.215"
serde_json = "1.0.133"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
